nowe wersje, nowe podejscie, ui-router, porzadki

--- a/app/index.jade
+++ b/app/index.jade
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en', ng-app='app', ng-controller='MainCtrl')
+html(lang='en', ng-app='app')
 	head
 		include /partials/env
 		meta(charset='utf-8')
@@ -7,13 +7,12 @@ html(lang='en', ng-app='app', ng-controller='MainCtrl')
 		meta(name='viewport', content='width=device-width')
 		meta(name='description', content='')
 		meta(name='author', content='')
-		title(ng-bind-template='CMS | {{windowTitle}}')
-		link(rel='shortcut icon', ng-href='{{dirtyPageState}}.ico')#favicon
+		title brunch-on-spitfire
 		link(rel='stylesheet', href='css/vendor.css')
 		link(rel='stylesheet', href='css/app.css')
 		script(src='js/vendor.js')
-		script(src='js/config.js')
 		script(src='js/templates.js')
 		script(src='js/app.js')
 	body
-		main(ng-include="'/templates/main.html'").full-height
+		.container
+			ui-view
