--- a/app/partials/env.jade
+++ b/app/partials/env.jade
@@ -1,22 +1,25 @@
 //- read vars from brunch config during brunch build
 - var server = process.server
-- var hash = process.gitHash
+- var git = process.git
 
 script.
-	window.gitHash = '#{hash}'
-
+	window.gitHash = '#{git.hash}'
+	window.gitBranch = '#{git.branch}'
+	window.gitTag = '#{git.tag}'
 if server.run
 	base(href='#{server.base}/')
-	script: :coffee
-		window.brunch ?= {}
-		window.brunch['auto-reload'] = enabled: true
-
+	script
+		:coffee-script
+			window.brunch ?= {}
+			window.brunch['auto-reload'] =
+				enabled: true
 else
-	script: :coffee
-		req = new XMLHttpRequest()
-		req.open "GET", document.location, false
-		req.send null
-		if context = req.getResponseHeader('context')
-			document.write "<base href='#{context}/'/>"
-		else
-			document.write "<base href='/'/>"
+	script
+		:coffee-script
+			req = new XMLHttpRequest()
+			req.open "GET", document.location, false
+			req.send null
+			if context = req.getResponseHeader('context')
+				document.write "<base href='#{context}/'/>"
+			else
+				document.write "<base href='/'/>"
