--- a/app/partials/env.jade
+++ b/app/partials/env.jade
@@ -8,18 +8,21 @@ script.
 	window.gitTag = '#{git.tag}'
 if server.run
 	base(href='#{server.base}/')
-	script
-		:coffee-script
-			window.brunch ?= {}
-			window.brunch['auto-reload'] =
-				enabled: true
+	script.
+		if (window.brunch == null) {
+			window.brunch = {};
+		}
+		window.brunch['auto-reload'] = {
+			enabled: true
+		};
 else
-	script
-		:coffee-script
-			req = new XMLHttpRequest()
-			req.open "GET", document.location, false
-			req.send null
-			if context = req.getResponseHeader('context')
-				document.write "<base href='#{context}/'/>"
-			else
-				document.write "<base href='/'/>"
+	script.
+		var context;
+		var req = new XMLHttpRequest();
+		req.open("GET", document.location, false);
+		req.send(null);
+		if (context = req.getResponseHeader('context')) {
+			document.write("<base href='" + context + "/'/>");
+		} else {
+			document.write("<base href='/'/>");
+		}
